--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<h1>Todos</h1>
+<ul>
+  <li>Get milk</li>
+  <li>Read book</li>
+  <li>Find tickets</li>
+</ul>
+<button onclick="alert('Thank You!');">Press Me</button>
 
 {{outlet}}
