ember route generation

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,9 +1,4 @@
-<h1>Todos</h1>
-<ul>
-  <li>Get milk</li>
-  <li>Read book</li>
-  <li>Find tickets</li>
-</ul>
-<button onclick="alert('Thank You!');">Press Me</button>
+{{#link-to 'index'}}Home{{/link-to}}
+{{#link-to 'user.new'}}Register{{/link-to}}
 
 {{outlet}}
