--- a/client/app/styles/_color.scss
+++ b/client/app/styles/_color.scss
@@ -11,3 +11,6 @@ $color-red: red;
 $color-yellow-pale: #ffffcc;
 
 $color-white: white;
+
+$color-turquoise: #40e0d0;
+$color-focus-outline: $color-turquoise;
