--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -4,5 +4,7 @@
 @import 'body';
 @import 'heading';
 @import 'form';
+@import 'notifier';
+@import 'login';
 @import 'register';
 @import 'confirmation';
