--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,6 +1,8 @@
+{{x-notifier}}
 <nav>
 {{#link-to 'index'}}Home{{/link-to}}
 {{#link-to 'user.new'}}Register{{/link-to}}
+{{#link-to 'session.new'}}Sign in{{/link-to}}
 </nav>
 
 {{outlet}}
